Ajustando os modelos

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,45 +18,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Juntando os dados"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ta\\trend.py:1030: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
-      "  self._psar[i] = high2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculando os indicadores e normalizando-os\n",
-    "olhc = tsla_data\n",
-    "data = agg_indicators(olhc)\n",
-    "data = normalize_indicators(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertendo para numpy arrays, caso ainda não estejam\n",
-    "X = np.array(data)  \n",
-    "y = np.array(lb.labelData(olhc, 0.1)).ravel()\n",
+    "def prepare_data(olhc):\n",
+    "    # Calculando os indicadores e normalizando-os\n",
+    "    data = agg_indicators(olhc)\n",
+    "    data = normalize_indicators(data)\n",
     "\n",
-    "# Divide os dados em conjuntos de treinamento e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "    # Rotulando os dados\n",
+    "    y = np.array(lb.labelData(olhc, 0.1)).ravel()\n",
+    "\n",
+    "    # Eliminando as linhas com NaN\n",
+    "    data[\"y\"] = y\n",
+    "    data = data.dropna()\n",
+    "\n",
+    "    # Convertendo para numpy arrays, caso ainda não estejam\n",
+    "    X = np.array(data)[:, :-1]\n",
+    "    y = np.array(data)[:, -1]\n",
+    "\n",
+    "    # # Divide os dados em conjuntos de treinamento e teste\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    return X_train, X_test, y_train, y_test"
    ]
   },
   {
@@ -68,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mlp(data, hidden_layers=(100, 100, 100), activation='logistic', \n",
+    "def mlp(olhc, hidden_layers=(100, 100, 100), activation='logistic', \n",
     "        solver='adam', max_iter=500, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de rede neural MLP e retorna as previsões e o relatório de classificação.\n",
@@ -89,23 +75,15 @@
     "    - y_pred_mlp: Previsões das classes no conjunto de teste.\n",
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Agregando os indicadores\n",
-    "    indicators_df = agg_indicators(data)\n",
-    "\n",
-    "    # Normalizando os indicadores\n",
-    "    normalized_data = normalize_indicators(indicators_df)\n",
-    "\n",
-    "    # Separando as variáveis X e Y\n",
-    "    X = normalized_data\n",
-    "    y = label_tsla_data\n",
-    "\n",
-    "    # Dividinfo os dados em conjuntos de treinamento e teste\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "    # Preparando os dados\n",
+    "    X_train, X_test, y_train, y_test = prepare_data(olhc)\n",
     "\n",
     "    # Definindo a rede neural com múltiplas camadas\n",
-    "    mlp = MLPClassifier(hidden_layer_sizes=hidden_layers, activation=activation,\n",
-    "                        solver=solver, max_iter=max_iter, random_state=random_state)\n",
+    "    mlp = MLPClassifier(hidden_layer_sizes = hidden_layers,\n",
+    "                        activation = activation,\n",
+    "                        solver = solver,\n",
+    "                        max_iter = max_iter,\n",
+    "                        random_state = random_state)\n",
     "\n",
     "    # Treina a rede neural\n",
     "    mlp.fit(X_train, y_train)\n",
@@ -117,23 +95,69 @@
     "    report = classification_report(y_test, y_pred_mlp)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_mlp, report"
+    "    return y_pred_mlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ta\\trend.py:1030: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  self._psar[i] = high2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         5\n",
+      "         0.0       0.48      0.32      0.38       328\n",
+      "         1.0       0.53      0.69      0.60       365\n",
+      "\n",
+      "    accuracy                           0.51       698\n",
+      "   macro avg       0.33      0.34      0.33       698\n",
+      "weighted avg       0.50      0.51      0.49       698\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = mlp(tsla_data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fazendo o Modelo Random Forest"
+    "## Fazendo o modelo de Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_forest(data, target_column, n_estimators=100, max_depth=None, random_state=42):\n",
+    "def random_forest(olhc, n_estimators=100, max_depth=None, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de Random Forest e retorna as previsões e o relatório de classificação.\n",
     "\n",
@@ -148,19 +172,8 @@
     "    - y_pred_rf: Previsões das classes no conjunto de teste.\n",
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Agregando os indicadores\n",
-    "    indicators_df = agg_indicators(data)\n",
-    "\n",
-    "    # Normalizando os indicadores\n",
-    "    normalized_data = normalize_indicators(indicators_df)\n",
-    "\n",
-    "    # Separando as variáveis X e Y\n",
-    "    X = normalized_data\n",
-    "    y = label_tsla_data\n",
-    "\n",
-    "    # Dividindo os dados em conjuntos de treinamento e teste\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "    # Preparando os dados\n",
+    "    X_train, X_test, y_train, y_test = prepare_data(olhc)\n",
     "\n",
     "    # Definindo o modelo Random Forest\n",
     "    rf = RandomForestClassifier(n_estimators=n_estimators, max_depth=max_depth, \n",
@@ -176,7 +189,53 @@
     "    report = classification_report(y_test, y_pred_rf)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_rf, report"
+    "    return y_pred_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ta\\trend.py:1030: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  self._psar[i] = high2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         5\n",
+      "         0.0       0.49      0.57      0.53       328\n",
+      "         1.0       0.54      0.48      0.51       365\n",
+      "\n",
+      "    accuracy                           0.52       698\n",
+      "   macro avg       0.35      0.35      0.34       698\n",
+      "weighted avg       0.52      0.52      0.51       698\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = random_forest(tsla_data)"
    ]
   },
   {
@@ -188,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_boosting(data, target_column, random_state=42):\n",
+    "def gradient_boosting(olhc, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de Gradient Boosting e retorna as previsões e o relatório de classificação.\n",
     "\n",
@@ -205,19 +264,8 @@
     "    - y_pred_gb: Previsões das classes no conjunto de teste.\n",
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Agregando os indicadores\n",
-    "    indicators_df = agg_indicators(data)\n",
-    "\n",
-    "    # Normalizando os indicadores\n",
-    "    normalized_data = normalize_indicators(indicators_df)\n",
-    "\n",
-    "    # Separando as variáveis X e Y\n",
-    "    X = normalized_data\n",
-    "    y = label_tsla_data\n",
-    "\n",
-    "    # Dividindo os dados em conjuntos de treinamento e teste\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "    # Preparando os dados\n",
+    "    X_train, X_test, y_train, y_test = prepare_data(olhc)\n",
     "\n",
     "    # Definindo o modelo Gradient Boosting\n",
     "    gb_model = GradientBoostingClassifier(random_state=random_state)\n",
@@ -232,28 +280,41 @@
     "    report = classification_report(y_test, y_pred_gb)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_gb, report"
+    "    return y_pred_gb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y_pred_probs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43my_pred_probs\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_pred_probs' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ta\\trend.py:1030: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  self._psar[i] = high2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         5\n",
+      "         0.0       0.48      0.54      0.51       328\n",
+      "         1.0       0.53      0.48      0.51       365\n",
+      "\n",
+      "    accuracy                           0.50       698\n",
+      "   macro avg       0.34      0.34      0.34       698\n",
+      "weighted avg       0.51      0.50      0.50       698\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(y_pred_probs)"
+    "y_pred = gradient_boosting(tsla_data)"
    ]
   },
   {
@@ -291,18 +352,18 @@
     }
    ],
    "source": [
-    "# Faz previsões de probabilidade\n",
-    "y_pred_probs = rf.predict_proba(X_test)\n",
+    "# # Faz previsões de probabilidade\n",
+    "# y_pred_probs = rf.predict_proba(X_test)\n",
     "\n",
-    "# Identifica a classe com maior probabilidade\n",
-    "y_pred_indices = np.argmax(y_pred_probs, axis=1)\n",
+    "# # Identifica a classe com maior probabilidade\n",
+    "# y_pred_indices = np.argmax(y_pred_probs, axis=1)\n",
     "\n",
-    "# Mapeia os índices para as classes de interesse\n",
-    "class_mapping = {0: 0, 1: 1, 2: -1}  # ajuste conforme necessário para sua classificação\n",
-    "y_pred = np.vectorize(class_mapping.get)(y_pred_indices)\n",
+    "# # Mapeia os índices para as classes de interesse\n",
+    "# class_mapping = {0: 0, 1: 1, 2: -1}  # ajuste conforme necessário para sua classificação\n",
+    "# y_pred = np.vectorize(class_mapping.get)(y_pred_indices)\n",
     "\n",
-    "# Avalia o modelo\n",
-    "print(classification_report(y_test, y_pred, target_names=[\"Desfazer Posição\", \"Compra\", \"Short\"]))"
+    "# # Avalia o modelo\n",
+    "# print(classification_report(y_test, y_pred, target_names=[\"Desfazer Posição\", \"Compra\", \"Short\"]))"
    ]
   }
  ],
