Ajuste nas chamadas

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -55,11 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA = prio_data"
+    "DATA = prio_data\n",
+    "YEAR = None"
    ]
   },
   {
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +213,7 @@
    ],
    "source": [
     "# Testando o modelo\n",
-    "dados_mlp = backtesting_model(DATA, mlp)"
+    "dados_mlp = backtesting_model(DATA, mlp, year = YEAR)"
    ]
   },
   {
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +394,7 @@
    ],
    "source": [
     "# Testando o modelo\n",
-    "dados_rf = backtesting_model(DATA, random_forest)"
+    "dados_rf = backtesting_model(DATA, random_forest, year = YEAR)"
    ]
   },
   {
@@ -529,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +571,7 @@
     }
    ],
    "source": [
-    "dados_gb = backtesting_model(DATA, gradient_boosting)"
+    "dados_gb = backtesting_model(DATA, gradient_boosting, year = YEAR)"
    ]
   },
   {
