--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[749 rows x 6 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,6 @@
        " 'LREN3.SA',\n",
        " 'MGLU3.SA',\n",
        " 'MRVE3.SA',\n",
-       " 'PDGR3.SA',\n",
        " 'PETR3.SA',\n",
        " 'PETR4.SA',\n",
        " 'RAIL3.SA',\n",
@@ -247,7 +246,7 @@
        " 'VALE3.SA']"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,14 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -337,7 +335,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABEV3.SA qualifies with avg volume: 27689635\n",
+      "ABEV3.SA qualifies with avg volume: 27689635\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "AZUL4.SA qualifies with avg volume: 19454729\n"
      ]
     },
@@ -345,7 +356,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -353,7 +363,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B3SA3.SA qualifies with avg volume: 42203145\n",
+      "B3SA3.SA qualifies with avg volume: 42203145\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BBAS3.SA qualifies with avg volume: 16670633\n"
      ]
     },
@@ -361,17 +384,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BBDC4.SA qualifies with avg volume: 38019779\n",
-      "CMIG4.SA qualifies with avg volume: 13622689\n",
+      "BBDC4.SA qualifies with avg volume: 38019779\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMIG4.SA qualifies with avg volume: 13622689\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "COGN3.SA qualifies with avg volume: 34866591\n"
      ]
     },
@@ -379,9 +426,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -389,8 +433,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPLE6.SA qualifies with avg volume: 14299732\n",
-      "CVCB3.SA qualifies with avg volume: 17802943\n",
+      "CPLE6.SA qualifies with avg volume: 14299732\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CVCB3.SA qualifies with avg volume: 17802943\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "FNOR11.SA qualifies with avg volume: 10109470\n"
      ]
     },
@@ -398,17 +468,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GGBR4.SA qualifies with avg volume: 12141407\n",
-      "HAPV3.SA qualifies with avg volume: 64878583\n",
+      "GGBR4.SA qualifies with avg volume: 12141407\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HAPV3.SA qualifies with avg volume: 64878583\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ITSA4.SA qualifies with avg volume: 21161116\n"
      ]
     },
@@ -416,9 +510,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -426,7 +517,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ITUB4.SA qualifies with avg volume: 23148391\n",
+      "ITUB4.SA qualifies with avg volume: 23148391\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "LREN3.SA qualifies with avg volume: 16791762\n"
      ]
     },
@@ -434,26 +538,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MGLU3.SA qualifies with avg volume: 18905270\n",
-      "MRVE3.SA qualifies with avg volume: 15100688\n",
-      "PDGR3.SA qualifies with avg volume: 16484622\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -461,8 +545,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PETR3.SA qualifies with avg volume: 10877329\n",
-      "PETR4.SA qualifies with avg volume: 37207772\n",
+      "MGLU3.SA qualifies with avg volume: 18905270\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRVE3.SA qualifies with avg volume: 15100688\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PETR3.SA qualifies with avg volume: 10877329\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PETR4.SA qualifies with avg volume: 37207772\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "RAIL3.SA qualifies with avg volume: 11783735\n"
      ]
     },
@@ -470,7 +608,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USIM5.SA qualifies with avg volume: 13736536\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[*********************100%***********************]  1 of 1 completed"
      ]
     },
@@ -478,7 +629,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USIM5.SA qualifies with avg volume: 13736536\n",
       "VALE3.SA qualifies with avg volume: 23347270\n"
      ]
     },
@@ -498,7 +648,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "tickers = [\"PRIO3.SA\", \"VIVA3.SA\", \"TSLA\"]\n",
+    "\n",
+    "for ticker in tickers:\n",
+    "    raw_data = yf.download(ticker)\n",
+    "    stocks[ticker] = transform_yf_data(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -511,24 +684,26 @@
       "2    B3SA3.SA    0.270644\n",
       "3    BBAS3.SA    0.160384\n",
       "4    BBDC4.SA    0.278162\n",
-      "5    CMIG4.SA    0.250826\n",
+      "5    CMIG4.SA    0.241920\n",
       "6    COGN3.SA    0.549224\n",
-      "7    CPLE6.SA    0.187297\n",
+      "7    CPLE6.SA    0.187316\n",
       "8    CVCB3.SA    0.589290\n",
       "9   FNOR11.SA    0.629313\n",
       "10   GGBR4.SA    0.279886\n",
       "11   HAPV3.SA    0.387972\n",
       "12   ITSA4.SA    0.168577\n",
       "13   ITUB4.SA    0.173786\n",
-      "14   LREN3.SA    0.405542\n",
+      "14   LREN3.SA    0.405633\n",
       "15   MGLU3.SA    0.583931\n",
       "16   MRVE3.SA    0.461754\n",
-      "17   PDGR3.SA    2.373320\n",
-      "18   PETR3.SA    0.281009\n",
-      "19   PETR4.SA    0.254988\n",
-      "20   RAIL3.SA    0.244958\n",
-      "21   USIM5.SA    0.480460\n",
-      "22   VALE3.SA    0.226241\n"
+      "17   PETR3.SA    0.281009\n",
+      "18   PETR4.SA    0.254988\n",
+      "19   RAIL3.SA    0.244958\n",
+      "20   USIM5.SA    0.480460\n",
+      "21   VALE3.SA    0.226241\n",
+      "22   PRIO3.SA    0.293644\n",
+      "23   VIVA3.SA    0.358685\n",
+      "24       TSLA    0.628878\n"
      ]
     }
    ],
