adicionando primeiras funções

--- a/results_analysis.ipynb
+++ b/results_analysis.ipynb
@@ -38,7 +38,7 @@
     "    xmin, xmax = np.min(bresults[value1]), np.max(bresults[value1])\n",
     "    ymin, ymax = np.min(bresults[value2]), np.max(bresults[value2])\n",
     "\n",
-    "    axes[0, 0].plot(bresults_azul[value1], bresults_azul[value2])\n",
+    "    axes[0, 0].plot(bresults_azul[value1], bresults_azul[value2], color = \"#\")\n",
     "    axes[0, 0].set_title(\"AZUL4.SA\")\n",
     "    axes[0, 0].set_xlim(xmin, xmax)\n",
     "    axes[0, 0].set_ylim(ymin, ymax)\n",
