--- a/analising.ipynb
+++ b/analising.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,8 @@
     "        spine.set_visible(False)\n",
     "\n",
     "    # Ajustes no gráfico\n",
-    "    plt.title(title, fontsize=14, font=font, color=\"black\")\n",
+    "    if title != None:\n",
+    "        plt.title(title, fontsize=14, font=font, color=\"black\")\n",
     "    plt.xlabel(x_col, font=font, color=\"black\")\n",
     "    plt.ylabel(y_col, font=font, color=\"black\")\n",
     "    \n",
