Adicionando as análises de indicadores

--- a/report.ipynb
+++ b/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +45,7 @@
     "from pathlib import Path\n",
     "import matplotlib as mpl\n",
     "import backtesting\n",
+    "import ast\n",
     "df = pd.read_csv(\"results.csv\")\n",
     "azul_cartesius = \"#1c285c\"\n",
     "fpath = Path(mpl.get_data_path(), r'C:\\Users\\kauan\\AppData\\Local\\Microsoft\\Windows\\Fonts\\Montserrat-Regular.ttf')\n",
@@ -954,6 +955,92 @@
    ],
    "source": [
     "main_process([\"data\\\\VIVA3.SA.csv\"], [-1], 2024, 2023, False, True, False, volatility_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análises dos indicadores\n",
+    "\n",
+    "Por último, temos abaixo algumas análises sobre como os indicadores utilizados influenciam nos resultados do nosso modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.read_csv(\"resultado_junto.csv\")\n",
+    "\n",
+    "results[\"Total Dict\"] = results[\"Total Dict\"].apply(lambda x: ast.literal_eval(x))\n",
+    "results[\"Selected Features\"] = results[\"Selected Features\"].apply(lambda x: ast.literal_eval(x))\n",
+    "\n",
+    "bresults = results[results[\"binarized\"] == 1]\n",
+    "nbresults = results[results[\"binarized\"] == 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Número de indicadores x Retorno\n",
+    "\n",
+    "Primeiro, temos a relação entre o número de indicadores utilizados e o retorno obtido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(data = results, x = \"Features\", y = \"Percent Return\", graph = \"line\", both = True, regression = False, font = fpath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Número de indicadores x Acurácia\n",
+    "\n",
+    "Em seguida, temos a análise sobre como o número de indicadores influencia a acurácia do modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(data = results, x = \"Features\", y = \"Accuracy Test\", graph = \"line\", both = True, regression = False, font = fpath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como notado, infelizmente não obtivemos nenhuma correlação entre o número de indicadores utilizados para o treinamento e os resultados retornados pelo modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Indicadores mais utilizados\n",
+    "\n",
+    "Para finalizar, temos um estudo sobre os indicadores mais utilizados ao longo dos treinamentos, ou seja, os que se mostraram como os mais relevantes para o aprendizado do modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
    ]
   }
  ],
