Citando o stop loss

--- a/report.ipynb
+++ b/report.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "A próxima etapa compreende a seleção de um modelo de machine learning e seu treinamento com os dados e rótulos gerados anteriormente. Com o uso da biblioteca `sklearn`, optamos pelo emprego de um modelo de **random forest** para a predição, tanto por possuir um desempenho relativamente eficiente quanto por geralmente apresentar resultados mais precisos. Com isso, selecionamos um ano de dados para ser separado para o processo de backtest e utilizamos o restante para o treinamento do modelo. Além disso, temos a opção de realizar esse treinamento e predição de forma binarizada, com dois modelos simultâneos, um prevendo 0s e 1s e outro prevendo 0s e -1s. Essas etapas estão codadas nos módulos [`backtesting_process.py`](./backtesting_process.py) e [`main_process.py`](./main_process.py).\n",
     "\n",
-    "Por fim, utilizamos a biblioteca [`backtesting`](https://pypi.org/project/Backtesting/) para simular a estratégia prevista para o ano de backtest e visualizar seus resultados. Para isso, temos no módulo [`trading_utils.py`](./trading_utils.py) a implementação de uma classe base dessa estratégia na forma exigida pela biblioteca.\n",
+    "Por fim, utilizamos a biblioteca [`backtesting`](https://pypi.org/project/Backtesting/) para simular a estratégia prevista para o ano de backtest com uma técnica de **stop loss** implementada manualmente e visualizar seus resultados. Para isso, temos no módulo [`trading_utils.py`](./trading_utils.py) a implementação de uma classe base dessa estratégia na forma exigida pela biblioteca.\n",
     "\n",
     "### A tunagem\n",
     "\n",
