--- a/relatório-slides/referencias.bib
+++ b/relatório-slides/referencias.bib
@@ -1,15 +1,43 @@
 @book{Prado,
-  author    = {Marcos Lopes de Prado},
-  title     = {Advances in Financial Machine Learning},
-  edition   = {1},
-  publisher = {Wiley},
-  year      = {2018}
+    title     = {Advances in Financial Machine Learning},
+    author    = {Marcos Lopez de Prado},
+    isbn      = {9781119482116},
+    year      = {2018},
+    publisher = {John Wiley \& Sons, Inc., Hoboken, New Jersey},
+    keywords  = {financial machine learning}
+}
+
+@book{Hull,
+    title     = {Options, Futures, and Other Derivatives},
+    author    = {John C. Hull},
+    isbn      = {9780133456318},
+    year      = {2015},
+    publisher = {Pearson Education, Inc},
+    keywords  = {logarithmic returns}
+}
+
+@book{Bouchaud,
+    title     = {Theory of Financial Risk and Derivative Pricing - From Statistical Physics to Risk Management},
+    author    = {Jean-Philippe Bouchaud and Marc Potters},
+    isbn      = {0521819164},
+    year      = {2003},
+    publisher = {The Press Syndicate of the University of Cambridge},
+    keywords  = {Risk management, logarithmic returns}
+}
+
+@book{Knight,
+    title     = {Forecasting Volatility in the Financial Markets, Third Edition},
+    author    = {John Knight and Stephen Satchell},
+    isbn      = {9780750669429},
+    year      = {2007},
+    publisher = {Elsevier Ltd.},
+    keywords  = {EWMSD}
 }
 
 @book{Kaabar,
-  author    = {Sofien Kaabar},
-  title     = {Mastering Financial Pattern Recognition: Finding and Back-Testing Candlestick Patterns with Python},
-  edition   = {3},
-  publisher = {O'Reilly Media},
-  year      = {2022}
+    author    = {Sofien Kaabar},
+    title     = {Mastering Financial Pattern Recognition: Finding and Back-Testing Candlestick Patterns with Python},
+    edition   = {3},
+    publisher = {O'Reilly Media},
+    year      = {2022}
 }
